[gd_scene format=3 uid="uid://bgvesaacofdjy"]

[ext_resource type="Script" uid="uid://ctvwpnuy61a2o" path="res://scenes/boss_attacks/homing_attack/homing_attack.gd" id="1_tih41"]
[ext_resource type="Texture2D" uid="uid://61wvyl0hmq1o" path="res://icon.svg" id="2_qm56a"]
[ext_resource type="Script" uid="uid://ct2ao5y04qtji" path="res://scenes/objects/components/hitbox.gd" id="3_mwh2y"]

[sub_resource type="AtlasTexture" id="AtlasTexture_fefrm"]
atlas = ExtResource("2_qm56a")
region = Rect2(64, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7qgqo"]
atlas = ExtResource("2_qm56a")
region = Rect2(32, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlfr0"]
atlas = ExtResource("2_qm56a")
region = Rect2(64, 64, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hmx8u"]
atlas = ExtResource("2_qm56a")
region = Rect2(32, 96, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_sddsa"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fefrm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7qgqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlfr0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hmx8u")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fefrm"]
size = Vector2(74, 74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tih41"]
size = Vector2(80, 80)

[node name="HomingAttack" type="AnimatableBody2D" unique_id=1234559325]
script = ExtResource("1_tih41")
damage = 5.0
speed = 150.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." unique_id=398896364]
scale = Vector2(2.25, 2.25)
sprite_frames = SubResource("SpriteFrames_sddsa")
autoplay = "default"
frame_progress = 0.61080515

[node name="CollisionShape2D" type="CollisionShape2D" parent="." unique_id=1558523574]
shape = SubResource("RectangleShape2D_fefrm")
disabled = true
debug_color = Color(0.8776978, 0.2844998, 0.4937958, 0.41960785)

[node name="Hitbox" type="Area2D" parent="." unique_id=497645412 node_paths=PackedStringArray("entity")]
script = ExtResource("3_mwh2y")
entity = NodePath("..")
damage = 5.0
hit_on_touch = true
metadata/_custom_type_script = "uid://ct2ao5y04qtji"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" unique_id=1471040396]
shape = SubResource("RectangleShape2D_tih41")

[node name="LifeTimer" type="Timer" parent="." unique_id=1318716053]
one_shot = true

[connection signal="has_damaged" from="Hitbox" to="." method="_on_hitbox_has_damaged"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_life_timer_timeout"]
